--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,9 +16,9 @@ jobs :
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -43,7 +43,7 @@ jobs :
         uses : docker/build-push-action@v2
         with :
           context: .
-          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=azuracast/azuracast_nginx_proxy:${{ steps.tag.outputs.TAG }}
           tags : azuracast/azuracast_nginx_proxy:${{ steps.tag.outputs.TAG }}
           push : true
