Apply best practices and prevent duplicate mime-type warning on startup.

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log off;
 
     sendfile  off;
     #tcp_nopush on;
@@ -36,16 +36,37 @@ http {
     gzip_buffers 16 8k;
     gzip_proxied any;
     gzip_types
-        text/plain
-        text/css
-        text/js
-        text/xml
-        text/javascript
+        application/atom+xml
+        application/geo+json
         application/javascript
         application/x-javascript
         application/json
+        application/ld+json
+        application/manifest+json
+        application/rdf+xml
+        application/rss+xml
+        application/vnd.ms-fontobject
+        application/wasm
+        application/x-web-app-manifest+json
+        application/xhtml+xml
         application/xml
-        application/xml+rss;
+        font/eot
+        font/otf
+        font/ttf
+        image/bmp
+        image/svg+xml
+        text/cache-manifest
+        text/calendar
+        text/css
+        text/javascript
+        text/markdown
+        text/plain
+        text/xml
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
 
     include /etc/nginx/conf.d/*.conf;
 }
